--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 05 15:47:23 EEST 2017
-sdk.dir=/Users/robertaksamaitis/Library/Android/sdk
+#Sat Sep 16 11:05:45 EEST 2017
+sdk.dir=C\:\\Users\\Justinas\\AppData\\Local\\Android\\android-sdk
